--- a/businness-learning.html
+++ b/businness-learning.html
@@ -306,7 +306,7 @@
 
 
                 <div class="container mt-0">
-                    <div class="d-flex justify-content-start gap-5 flex-wrap">
+                    <div class="d-flex justify-content-start gap-1 flex-wrap">
 
                         <div class="profile-card">
                             <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Aurora"
@@ -398,7 +398,7 @@
                     <div class="custom-card">
 
                         <!-- Header -->
-                        <div class="d-flex align-items-center gap-1 mb-4">
+                        <div class="d-flex align-items-center gap-1 mb-4 flex-wrap">
                             <span class="sale-badge">BIG SALE</span>
                             <h6 class="mb-0 fw-bold">Buy this course in package</h6>
                         </div>
