course-content updated

--- a/businness-learning.html
+++ b/businness-learning.html
@@ -227,10 +227,10 @@
                             <p class="text-muted">Web Designer &amp; Best-Selling Instructor</p>
 
                             <div class="d-flex gap-1 mt-4">
-                                <div class="social-icon"><i class="bi bi-facebook"></i></div>
-                                <div class="social-icon x"><i class="bi bi-twitter"></i></div>
-                                <div class="social-icon"><i class="bi bi-youtube" style="color: red;"></i></div>
-                                <div class="social-icon linkedin"><i class="bi bi-linkedin"></i></div>
+                                <div class="business-social-icon"><i class="bi bi-facebook"></i></div>
+                                <div class="business-social-icon x"><i class="bi bi-twitter"></i></div>
+                                <div class="business-social-icon"><i class="bi bi-youtube" style="color: red;"></i></div>
+                                <div class="business-social-icon linkedin"><i class="bi bi-linkedin"></i></div>
                             </div>
                         </div>
                     </div>
